src/css/blocks.css
/* Specific, structural parts of the doc */
#pageTitle {
  text-align: center;
}

.fullStatBlock {
  background-color: #FDF1DC;

  width: 420px;

  box-shadow:  0 20px  15px #888888;
  padding: 10px;
}

/* Name section */
.nameSection > h1.monsterName {
  margin: 0px;
}

.nameSection > .monsterName {
  font-family: 'Libre Baskerville', 'Lora', 'Calisto MT', 'Bookman Old Style', Bookman, 'Goudy Old Style', Garamond, 'Hoefler Text', 'Bitstream Charter', Georgia, serif;
  color: #7A200D;
  font-weight: 700;
  font-size: 23px;
  letter-spacing: 1px;
  font-variant: small-caps;
}

.nameSection > .overviewDetails {
  font-style: italic;
  font-size: 12px;
  font-family: sans-serif;
}

.nameSection .alignmentTable {
  cursor: pointer;
  border-spacing: 0.35em;
}

.nameSection .alignmentTable td {
  border: 1px solid #922610;
  text-align: center;
}

.nameSection .alignmentTable td:hover {
  background-color: #ffe3b2;
}

/* Base stats section */
.statsSection .eachStatContainer {
  display: flex;
}

.statsSection .eachStatContainer .indivStat {
  flex-grow: 1;
  text-align: center;
}

.actionsSection h2 {
  font-variant: small-caps;
  color: #7A200D;
}

/* Broad classes for multiple components */
h2 {
  border-bottom: 1px solid #7A200D;
  margin-top: 0.7em;
  margin-bottom: 0.3em;
}

.creatureProperty {
  padding-left: 1.5em;
  text-indent: -1.5em;
}

.creatureProperty .propName {
  margin-right: 0.2em;
}

.creatureAbility {
  margin-bottom: 0.5em;
}

.majorTerm {
  color: #7A200D;
  font-size: 15px;
  font-weight: bold;
  font-family: sans-serif;
}

.highlightedText {
  font-size: 15px;
  color: #7A200D;
  font-family: sans-serif;
}

.abilityName {
  font-size: 15px;
  font-weight: bold;
  font-family: sans-serif;
  font-style: italic;
  margin-right: 0.4em;
}

.abilityDescription {
  font-size: 15px;
  font-family: sans-serif;
}

input.inlineTextEdit[type=text], select.inlineTextEdit {
  background-color: transparent;
}

svg.majorDivider {
  fill: #922610;
  stroke: #922610;
}

